# CFRI

./: README.md  environment.yml  pyproject.toml
configs/: ncsef.yaml
docs/: CFRI_scientific_documentation.md
outputs/washington/: analysis_summary.csv  flood_events.csv  model_comparison.csv
outputs/washington/reports/: abstract.txt  figure_captions.md  judge_qa.md  methods.md  summary_stats.csv
outputs/wilmington/: analysis_summary.csv  cfri_v2_results.csv  flood_events.csv  model_comparison.csv
outputs/wilmington/reports/: abstract.txt  figure_captions.md  methods.md  summary_stats.csv
scripts/: download_data.py  run_cfri_v2_analysis.py  run_pipeline.py
src/compound_flood/: __init__.py  cfri_v2.py  evaluation.py  events.py  features.py  io.py  plots.py  preprocess.py  report.py  thresholding.py  utils.py
